<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PassActivity"
        android:orientation="vertical"
        android:background="#57CAB0B0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/backbutton"
                android:src="@drawable/cross"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pass_detail"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_weight="2"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:cardBackgroundColor="#F3564A"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:background="#57CAB0B0">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/profile_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="25dp"
                android:text="@string/nora_kim"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="140dp"
                android:text="@string/robin"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/viewmap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/you_are_the_first_people_back_in_the_office_mind_the_signs_put_up_and_complete_your_checkpoint_daily"
                android:layout_margin="10dp"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offices"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:background="#57CAB0B0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="4"
                android:background="#57CAB0B0">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/boston_hq"
                        android:textAlignment="textEnd"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:layout_marginTop="2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/work_area"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/sales_amp_marketing"
                        android:textAlignment="textEnd"
                        android:layout_margin="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:layout_marginTop="2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/desk"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:id="@+id/tv_viewMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="View On Map ->"
                        android:textAlignment="textEnd"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/schedule"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="5dp"/>
                    <Spinner
                        android:id="@+id/schedule"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"
                        android:textAlignment="textEnd"/>
<!--                    <TextView-->
<!--                        android:id="@+id/schedule"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_weight="1"-->
<!--                        android:text="@string/mon_wed_fri"-->
<!--                        android:textAlignment="textEnd"-->
<!--                        android:layout_margin="5dp"-->
<!--                        android:textColor="@color/black"/>-->
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:background="#57CAB0B0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/desk_booking"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/during_office_hours"
                    android:textAlignment="textEnd"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
