<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Bottom navigation starts here -->
    <LinearLayout
        android:id="@+id/ll_bottom_nav"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/white">

        <Button
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?borderlessButtonStyle"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:text="@string/pass"/>
        <Button
            android:id="@+id/office"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/office"
            android:layout_weight="1"
            style="?borderlessButtonStyle"
            android:textAlignment="gravity"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/people"
            android:layout_weight="1"
            style="?borderlessButtonStyle"
            android:textAlignment="gravity"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ScrollView
        android:layout_above="@id/ll_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#57CAB0B0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardBackgroundColor="#F3564A"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/profile_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/nora_kim"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/floor_1_boston"
                    android:textColor="#212121"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="320dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/details" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="327dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="monospace"
                    android:text="@string/i" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="160dp"
                    android:text="@string/robin"
                    android:textColor="@color/white"
                    android:textSize="40sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/today_june_11"
                android:textColor="#616161"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/quarter_3_product_amp_engineering_kickoff"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/meeting_in_11_min_at_11_00_am"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="75dp"
                    android:text="@string/_6_attendees_in_office"
                    android:textSize="12sp"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="90dp"
                    android:background="?android:attr/listChoiceIndicatorSingle"
                    android:contentDescription="@string/profile_photo" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="90dp"
                    android:background="?android:attr/listChoiceIndicatorSingle"
                    android:contentDescription="@string/profile_photo"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="90dp"
                    android:background="?android:attr/listChoiceIndicatorSingle"
                    android:contentDescription="@string/profile_photo"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="90dp"
                    android:background="?android:attr/listChoiceIndicatorSingle"
                    android:contentDescription="@string/profile_photo"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="90dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="135dp"
                    android:layout_marginTop="90dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/rectangle"
                    android:contentDescription="@string/add_a_space"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_space"
                    android:layout_marginTop="155dp"
                    android:layout_marginStart="35dp"
                    android:textSize="18sp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_more_events_later"
                android:textAlignment="center"
                android:textColor="#616161" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/plan_ahead"
                android:textColor="#616161"
                android:textSize="15dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_a_desk_for_next_week"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_margin="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6_teammates_will_be_in"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="135dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="185dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/profile_photo"
                    android:background="?android:attr/listChoiceIndicatorSingle" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>